# spkcspider-domainauth

./: .gitignore  README.md  manage.py  pyproject.toml  test_settings.py
spider_domainauth/: __init__.py  abstract_models.py  apps.py  models.py  urls.py  utils.py  views.py
spider_domainauth/migrations/: 0001_initial.py
tests/: test_domainauth.py
tests/fixtures/: test_default.json
