[tool.poetry]
name = "spkcspider-domainauth"
description = "Helper for spkcspiders domain authentication"
version = "0.1"
authors = ["Alexander Kaftan"]
readme = "README.md"
repository = ""
packages = [
    { include = "spider_domainauth" },
]

[tool.poetry.dependencies]
python = ">=3.5"
spkcspider = ">=0.8a2"


[tool.poetry.extras]
test = ["django-webtest", "spkcspider[test]>=0.8a2"]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.4.0
skipsdist=true
envlist = py{35,36,37}-django{22,master}

[testenv]
commands = python -Wd ./manage.py test


setenv =
    PYTHONDONTWRITEBYTECODE=1

deps =
  spkcspider[test]
  django-webtest
  WSGIProxy2
  django22: Django>=2.2a1,<=2.2.99
  djangomaster: https://github.com/django/django/archive/master.zip

"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
