[tool.poetry]
name = "spkcspider-domainauth"
description = "Helper for spkcspiders domain authentication"
version = "0.6.1"
authors = ["Alexander Kaftan"]
readme = "README.md"
repository = "https://github.com/spkcspider/spkcspider-domainauth"
packages = [
    { include = "spider_domainauth" },
]

[tool.poetry.dependencies]
python = ">=3.5"
django = ">=2.0"


[tool.poetry.extras]
spkcspider = ["spkcspider>=0.8a2"]
ratelimit = ["django-fast-ratelimit>=0.5"]
test = ["spkcspider[test]", "pytest-django", "django-webtest"]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.4.0
skipsdist=true
envlist = py{35,36,37}-django{22,master}

[testenv]
commands = pytest tests


setenv =
    PYTHONDONTWRITEBYTECODE=1

deps =
  pytest-django
  spkcspider[test]
  django-webtest
  django22: Django>=2.2a1,<=2.2.99
  djangomaster: https://github.com/django/django/archive/master.zip

"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
